cp project/force-app/main/default/objects/Booking__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <label>Booking Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>