cp project/force-app/main/default/objects/Booking__c/fields/Commission_Status__c.field-meta.xml
<CustomField>
    <fullName>Commission_Status__c</fullName>
    <label>Commission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Not Eligible</fullName>
                    <default>true</default>
                    <label>Not Eligible</label>
                </value>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Calculated</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>