cp project/force-app/main/default/objects/Booking__c/fields/CRM_Executive__c.field-meta.xml
<CustomField>
    <fullName>CRM_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Bookings</relationshipLabel>
    <relationshipName>Assigned_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>