cp project/force-app/main/default/objects/Booking__c/fields/Customer_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contribution__c</fullName>
    <label>Customer Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>