cp project/force-app/main/default/objects/Booking__c/fields/Facing__c.field-meta.xml
<CustomField>
    <fullName>Facing__c</fullName>
    <label>Facing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>