cp project/force-app/main/default/objects/Booking__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <label>Funding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
                <default>true</default>
                <label>Bank Loan (DD Mandatory)</label>
            </value>
            <value>
                <fullName>Self-payment</fullName>
                <label>Self-payment (100% Cleared)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>