cp project/force-app/main/default/objects/Booking__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Golden Rule 2: Locked while pending approval</description>
    <label>Is Locked (Rule 2)</label>
    <type>Checkbox</type>
</CustomField>