cp project/force-app/main/default/objects/Booking__c/fields/Last_Communication_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Communication_Date__c</fullName>
    <label>Last Communication Date</label>
    <type>Date</type>
</CustomField>