cp project/force-app/main/default/objects/Booking__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>