cp project/force-app/main/default/objects/Booking__c/fields/Lead_Registration__c.field-meta.xml
<CustomField>
    <fullName>Lead_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Registration</label>
    <referenceTo>Lead_Registration__c</referenceTo>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>