cp project/force-app/main/default/objects/Booking__c/fields/Loan_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Disbursement_Date__c</fullName>
    <label>Loan Disbursement Date</label>
    <type>Date</type>
</CustomField>