cp project/force-app/main/default/objects/Booking__c/fields/Loan_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Loan_Interest_Rate__c</fullName>
    <label>Loan Interest Rate (% p.a.)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>