cp project/force-app/main/default/objects/Booking__c/fields/Loan_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Loan_Outstanding__c</fullName>
    <label>Loan Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>