cp project/force-app/main/default/objects/Booking__c/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <label>Loan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
                <default>true</default>
                <label>Applied</label>
            </value>
            <value>
                <fullName>Under Processing</fullName>
            </value>
            <value>
                <fullName>Sanctioned</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Partially Disbursed</fullName>
            </value>
            <value>
                <fullName>Fully Disbursed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>