cp project/force-app/main/default/objects/Booking__c/fields/Loan_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Tenure_Months__c</fullName>
    <label>Loan Tenure (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>