cp project/force-app/main/default/objects/Booking__c/fields/Lock_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lock_Reason__c</fullName>
    <label>Lock Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>