cp project/force-app/main/default/objects/Booking__c/fields/Next_Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Next_Milestone_Name__c</fullName>
    <label>Next Milestone Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>