cp project/force-app/main/default/objects/Booking__c/fields/Odoo_Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Booking_ID__c</fullName>
    <label>Odoo Booking ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>