cp project/force-app/main/default/objects/Booking__c/fields/Open_Service_Requests_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Service_Requests_Count__c</fullName>
    <label>Open Service Requests</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>