cp project/force-app/main/default/objects/Booking__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <label>Parking</label>
    <length>50</length>
    <type>Text</type>
</CustomField>