cp project/force-app/main/default/objects/Booking__c/fields/Payment_Plan_Activated__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Activated__c</fullName>
    <label>Payment Plan Activated</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>