cp project/force-app/main/default/objects/Booking__c/fields/Payment_Plan_Months__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Months__c</fullName>
    <label>Payment Plan Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>