cp project/force-app/main/default/objects/Booking__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partial,</fullName>
                <isActive>false</isActive>
                <label>Partial,</label>
            </value>
            <value>
                <fullName>Pending,</fullName>
                <isActive>false</isActive>
                <label>Pending,</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>