cp project/force-app/main/default/objects/Booking__c/fields/Pending_Dues__c.field-meta.xml
<CustomField>
    <fullName>Pending_Dues__c</fullName>
    <label>Pending Milestone Dues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>