cp project/force-app/main/default/objects/Booking__c/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName>
    <label>Taxes (GST 5%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>