cp project/force-app/main/default/objects/Booking__c/fields/Total_Demanded__c.field-meta.xml
<CustomField>
    <fullName>Total_Demanded__c</fullName>
    <label>Total Demanded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>