cp project/force-app/main/default/objects/Booking__c/fields/Total_Property_Plot_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Property_Plot_Amount__c</fullName>
    <label>Total Property/Plot Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>