cp project/force-app/main/default/objects/Booking__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <label>Tower / Block</label>
    <length>50</length>
    <type>Text</type>
</CustomField>