cp project/force-app/main/default/objects/Booking__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type / Configuration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>