cp project/force-app/main/default/objects/Booking__c/fields/Welcome_Call_Done__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Call Done</label>
    <type>Checkbox</type>
</CustomField>