cp project/force-app/main/default/objects/Booking__c/fields/Welcome_Mail_Date__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Mail_Date__c</fullName>
    <label>Welcome Mail Date</label>
    <type>DateTime</type>
</CustomField>