cp project/force-app/main/default/objects/Booking__c/validationRules/Booking_Amount_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Amount_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Booking_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Booking Amount must be greater than zero.</errorMessage>
</ValidationRule>