cp project/force-app/main/default/objects/Booking__c/validationRules/Booking_Date_Cannot_Be_in_the_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Date_Cannot_Be_in_the_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Booking_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Booking Date cannot be a future date.</errorMessage>
</ValidationRule>