cp project/force-app/main/default/objects/Booking__c/validationRules/Booking_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Booking_Date__c)</errorConditionFormula>
    <errorMessage>Booking Date is required.</errorMessage>
</ValidationRule>