cp project/force-app/main/default/objects/Booking__c/validationRules/Booking_Unit_Must_Be_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Unit_Must_Be_Available</fullName>
    <active>true</active>
    <description>Ensures that the selected Unit has Status Available before a Booking can be created.</description>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT(ISBLANK(Unit__c)),
    TEXT(Unit__r.Status__c) != &apos;Available&apos;
)</errorConditionFormula>
    <errorDisplayField>Unit__c</errorDisplayField>
    <errorMessage>Selected Unit is not available.</errorMessage>
</ValidationRule>