cp project/force-app/main/default/objects/Booking__c/validationRules/Opportunity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Opportunity__c)</errorConditionFormula>
    <errorMessage>Please select an Opportunity.</errorMessage>
</ValidationRule>