cp project/force-app/main/default/objects/Booking__c/validationRules/Payment_Status_Required_When_Booking_is.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Status_Required_When_Booking_is</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Booking_Status__c, &quot;Confirmed&quot;),
    ISBLANK(TEXT(Payment_Status__c))
)</errorConditionFormula>
    <errorMessage>Please select the Payment Status when the Booking is Confirmed.</errorMessage>
</ValidationRule>