cp project/force-app/main/default/objects/Booking__c/validationRules/Remarks_Required_When_Booking_is_Cancell.validationRule-meta.xml
<ValidationRule>
    <fullName>Remarks_Required_When_Booking_is_Cancell</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Booking_Status__c, &quot;Cancelled&quot;),
    ISBLANK(Remarks__c)
)</errorConditionFormula>
    <errorMessage>Please enter remarks when cancelling a booking.</errorMessage>
</ValidationRule>