cp project/force-app/main/default/objects/Booking__c/validationRules/Unit_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Unit__c)</errorConditionFormula>
    <errorMessage>Please select a Unit.</errorMessage>
</ValidationRule>