cp project/force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Tower__c</columns>
    <columns>Stage__c</columns>
    <columns>Funding_Type__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Total_Paid__c</columns>
    <columns>Pending_Dues__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>